--- a/.github/workflows/docker-buid.yml
+++ b/.github/workflows/docker-buid.yml
@@ -42,4 +42,4 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64
           push: true
-          tags: {{ secrets.DOCKERHUB_REPO }}/python-helloworld:latest
+          tags: ${{ secrets.DOCKERHUB_REPO }}/python-helloworld:latest
