--- a/exercises/python-helloworld/Dockerfile
+++ b/exercises/python-helloworld/Dockerfile
@@ -1,8 +1,9 @@
 FROM python:3.8
-LABEL maintainer="Katie Gamanji"
+LABEL maintainer="Varun Malik"
 
 COPY . /app
 WORKDIR /app
+RUN ls
 RUN pip install -r requirements.txt
 
 # command to run on container start
