--- a/exercises/python-helloworld/Dockerfile
+++ b/exercises/python-helloworld/Dockerfile
@@ -3,8 +3,7 @@ LABEL maintainer="Varun Malik"
 
 COPY . /app
 WORKDIR /app
-RUN ls
-RUN pip install -r requirements.txt
+RUN pip install -r exercises/python-helloworld/requirements.txt
 
 # command to run on container start
 CMD [ "python", "app.py" ]
